# ray_trace_repo

./: .gitignore  CMakeLists.txt  main.h  owrt_main.cpp
include/: camera.h  hittable.h  hittable_list.h  interval.h  ray_color.h  vec3.h
result/: image.ppm
